[package]
name = "proximity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = "2.33.3"
env_logger = "0.9.0"
humantime-serde = "1.0.1"
log = "0.4"
rand = { version = "0.8.4", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strfmt = "0.1.6"
tokio = { version = "1.11.0", features = ["full"] }
trust-dns-resolver = "0.20.3"
